# warc2text-runner

./: .gitignore  .pre-commit-config.yaml  LANGID.md  LICENSE  README.md  giashard.sh  lang_stats.sh  proto_langid.py  pyproject.toml  run_warc2text.sh
formats_test/: README.md  compare_process_text.sh  compare_process_urldate.sh  compare_process_urltext.sh  pipeline_overhead.sh  run_all.sh  separatefiles2json.sh
hf_upload/: 1.prof  2.prof  README.md  check_uploaded.py  check_uploaded_gold.py  cleaned_du.tsv  hf_size.py  hf_size.sh  hf_upload.sh  hf_upload_lang.py  lang_codes.ipynb  merge.sh  test_conversion_fail.sh  test_conversion_fail1.sh
labeling/: LanguageBalancing.ipynb
langid_scripts/: README.md  basic_log.py  proto_langid.py
notebooks/: compare_parsers.ipynb
one/: run_giashard.sh  run_warc2text.sh
overlap/: README.md  Sketches.ipynb  overlap-domainFalse-cc40_urls.txt-wide00015_filtered_urls.txt.tsv  overlap-domainFalse-cc40_urls.txt-wide00017_filtered_urls.txt.tsv  overlap-domainFalse-wide00015_filtered_urls.txt-cc40_urls.txt.tsv  overlap-domainFalse-wide00015_filtered_urls.txt-wide00017_filtered_urls.txt.tsv  overlap-domainFalse-wide00017_filtered_urls.txt-cc40_urls.txt.tsv  overlap-domainFalse-wide00017_filtered_urls.txt-wide00015_filtered_urls.txt.tsv  overlap-domainTrue-cc40_urls.txt-wide00015_filtered_urls.txt.tsv  overlap-domainTrue-cc40_urls.txt-wide00017_filtered_urls.txt.tsv  overlap-domainTrue-wide00015_filtered_urls.txt-cc40_urls.txt.tsv  overlap-domainTrue-wide00015_filtered_urls.txt-wide00017_filtered_urls.txt.tsv  overlap-domainTrue-wide00017_filtered_urls.txt-cc40_urls.txt.tsv  overlap-domainTrue-wide00017_filtered_urls.txt-wide00015_filtered_urls.txt.tsv  overlap.py  setsketch.py  setsketch_simulation.ipynb  setsketch_simulation.py  setsketch_union.py  setsketch_withngrams.py
regroup/: batch_by_size.py  run_regroup.sh
robotstxt/: README.md  filter_robotstxt.sh  has_robotstxt_sampled.sh  test_robotsparser.py  warc2requesturls.sh
sample/: README.md  collection2group.tsv  extract_id2coll.py  prepare_annotation_round1.py  prepare_annotation_round1.sh.hist  sample-perlang.sh  sample.sh.history  split_by_collection.py  strat_sample.sh.history  stratified_sample.py  test_reservoir.sh
stats/: get_sample_prob.sh  hplt2_languages_families.tsv  hplt_v3_cleaned.json  hplt_v3_cleaned.tsv  jsonl2scoredlines.sh  lang-descriptions.ipynb  lang-stats-comparison.ipynb  lang-stats-release1.ipynb  lang-stats-release1VS2.ipynb  languages.tsv  mrstats.py  mrstats_r1_warc2textout.py  mrstats_r2.py  mrstats_r2_stage2out.py  plot-lang-stats.ipynb  plot_lang_stats.py  reduce_stats.py  release1_reduce_stats.py  release1_stats.sh  release1_table_4_2.py  release1_text_stats.sh  release23_text_stats_mr.sh  release2_mapreduce.py  release2_stage2_text_stats.sh  requirements_lock.txt  run_sampledscoredlines.sh  samplescoredlines.sh  scores-length-hists.ipynb  text_stats.sh  text_stats_mr.sh  treemap_builder.py  treemap_builder_pool.py  wp2_stats.csv  wp2_stats.tsv  wp2_stats_samples.tsv  wp2_stats_slices.ods
three/: README.MD  cputime.sh  cputime2.sh  find_crawls.sh  stage1outsize.sh  stage1speed.ipynb  stage1speed.py
two/: README.MD  find_crawls.sh  generate_batches.sh  generate_tasks.sh  it3-resource-estimates.ipynb  merge-json.py  requirements_LUMI.txt  requirements_LUMIall.txt  requirements_LUMIextra.txt  run_stage2_local.sh  run_warc2html.sh  run_warc2html_local.sh  run_warc2html_remote.sh  run_warc2html_task.sh  sample100.sh  (+7 more)
(+2126 files in other folders)
